syntax = "proto3";

option go_package = "github.com/CodeYourFuture/immersive-go-course/grpc-client-server/prober";

package prober;

// The prober service definition.
service Prober {
  rpc DoProbes (ProbeRequest) returns (ProbeReply) {}
}

// The request message 
message ProbeRequest {
  string endpoint = 1;
  int64 num_of_requests = 2;
  optional int64 time_out_msecs = 3; // if not specified set default at 2000 ms
}

// The response message containing the result
message ProbeReply {
// average response time of the several requests
  float avg_latency_msecs = 1;
  float percentage_errors = 2;
  map<int64, int64> status_codes = 3;
}

